--- a/_pages/tag-archive.html
+++ b/_pages/tag-archive.html
@@ -9,6 +9,10 @@ author_profile: true
 {% include group-by-array collection=site.posts field="tags" %}
 
 {% for tag in group_names %}
+<a href="#{{ tag | slugify }}" class="page__taxonomy-item"> {{ tag }} </a> &nbsp;&nbsp;
+{% endfor %}
+
+{% for tag in group_names %}
   {% assign posts = group_items[forloop.index0] %}
   <h2 id="{{ tag | slugify }}" class="archive__subtitle">{{ tag }}</h2>
   {% for post in posts %}
